Adds README and COPYING

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="keywords" content="seven kingdoms, ancient adversaries, pc, game, videogame, 7kaa, 7k">
     <title>Seven Kingdoms Acient Adversaries</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet"> 
 </head>
 <body>
 <div class="main-container">
