--- a/src/template.html
+++ b/src/template.html
@@ -26,11 +26,11 @@ Copyright 2021 Lenny Andreu
 	%sapper.base%
 
 	<link rel="stylesheet" href="global.css">
+	<link rel="stylesheet" href="fonts/cinzel.css">
+	<link rel="stylesheet" href="fonts/accanthis.css">
 	<link rel="manifest" href="manifest.json" crossorigin="use-credentials">
 	<link rel="icon" type="image/png" href="favicon.png">
 	<link rel="apple-touch-icon" href="logo-192.png">
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet"> 
 
 	<!-- Sapper creates a <script> tag containing `src/client.js`
 	     and anything else it needs to hydrate the app and
