Add preload to fonts

--- a/src/template.html
+++ b/src/template.html
@@ -26,8 +26,8 @@ Copyright 2021 Lenny Andreu
 	%sapper.base%
 
 	<link rel="stylesheet" href="global.css">
-	<link rel="stylesheet" href="fonts/cinzel.css">
-	<link rel="stylesheet" href="fonts/accanthis.css">
+	<link rel="stylesheet"rel=preload href="fonts/cinzel.css">
+	<link rel="stylesheet" rel=preload href="fonts/accanthis.css">
 	<link rel="manifest" href="manifest.json" crossorigin="use-credentials">
 	<link rel="icon" type="image/png" href="favicon.png">
 	<link rel="apple-touch-icon" href="logo-192.png">
